<resources>
    <string name="app_name">WorkoutDailyPlanner</string>
    <string name="hello_there_welcome_back">Hallo Kawan, Selamat Datang Kembali</string>
    <string name="sign_in_to_continue">Sign In untuk melanjutkan</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">LUPA PASSWORD ?</string>
    <string name="new_user_register">Pengguna Baru ? Register</string>
    <string name="design_by_prana_reza_alviana">Design by Prana Reza Alviana</string>
    <string name="workout_daily_planner">Workout Daily Planner</string>
    <string name="username">Username</string>
    <string name="age">Umur</string>
    <string name="register">Register</string>
    <string name="create_your_account"> Buat Akun Anda</string>
    <string name="forget_your_password">Lupa Password Anda ?</string>
    <string name="enter_your_email">Masukan Email Anda</string>
    <string name="reset_password">ATUR ULANG PASSWORD</string>
    <string name="login_here">Login Disini!</string>
    <string name="titlepage">Jangan lupa untuk selalu olahraga untuk kesehetan tubuh anda.</string>
    <string name="start_workout">START WORKOUT</string>
    <string name="Lets">Buat badan anda menjadi lebih baik dari sekarang</string>
    <string name="image_home">Image Home</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="profile">Profile</string>
    <string name="klik_gambar_untung_mengubah_profile">Klik gambar untung mengubah profile</string>
    <string name="belum_ada_pengingat_nklik_untuk_menambahkan_pengingat">Belum ada pengingat\nKlik + untuk menambahkan pengingat</string>
    <string name="beranda">Beranda</string>
    <string name="pengingat">Pengingat</string>
    <string name="pengaturan_profil">Pengaturan Profil</string>
    <string name="komunikasi">Komunikasi</string>
    <string name="kontak_kami">Kontak Kami</string>
    <string name="tanggal_dan_waktu">Tanggal dan Waktu</string>
    <string name="pilih">PILIH</string>
    <string name="pesan_notifikasi">Pesan Notifikasi</string>
    <string name="tambah">Tambah</string>
    <string name="kategori_latihan">Kategori Latihan</string>
</resources>
